<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyDocument</string>
    <string name="menu_operation">操作</string>

    <string name="menu_operation_copy">复制</string>
    <string name="menu_operation_copyto">粘贴</string>
    <string name="menu_operation_moveto">移动到</string>

    <string name="menu_operation_cut">剪切</string>
    <string name="menu_operation_rename">重命名</string>
    <string name="menu_operation_delete">删除</string>
    <string name="menu_operation_selectall">全选</string>
    <string name="menu_operation_info">属性</string>
    
    <string name="operation_menu_new">新建</string>
    <string name="operation_menu_favorites">收藏夹</string>
    <string name="operation_menu_about">关于</string>
    <string name="operation_menu_setting">设置</string>
    <string name="operation_menu_multi_select">多选</string>
    <string name="operation_menu_help">帮助</string>
    <string name="operation_menu_exit">退出</string>
</resources>
